--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,13 @@
             <version>3.36.0.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <properties>
