--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
             <version>13</version>
+<!--            <classifier>mac</classifier>-->
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-graphics -->
@@ -21,6 +22,7 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-graphics</artifactId>
             <version>13</version>
+<!--            <classifier>mac</classifier>-->
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-base -->
@@ -28,6 +30,7 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-base</artifactId>
             <version>13</version>
+<!--            <classifier>mac</classifier>-->
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-fxml -->
@@ -35,6 +38,7 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
             <version>13</version>
+<!--            <classifier>mac</classifier>-->
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.json/json -->
