--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.example</groupId>
     <artifactId>TrashSnooker</artifactId>
-    <version>1.0.2</version>
+    <version>1.0-ALPHA-1</version>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-controls -->
@@ -39,6 +39,12 @@
             <artifactId>javafx-fxml</artifactId>
             <version>13</version>
 <!--            <classifier>mac</classifier>-->
+        </dependency>
+
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
+            <version>13</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.json/json -->
