--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.example</groupId>
     <artifactId>TrashSnooker</artifactId>
-    <version>1.0-Alpha-20230305</version>
+    <version>1.0-Alpha-2</version>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-controls -->
