--- a/user/config.cfg
+++ b/user/config.cfg
@@ -1,6 +1,8 @@
 nThreads=16
 recordCompression=xz
-systemZoom=1.25
+fastGameAiming=1.0
+systemZoom=1.0
+fastGameAiStrength=1.0
 locale=zh_CN
-resolution=1920x1080
+resolution=1536x864
 version=26
