--- a/user/config.cfg
+++ b/user/config.cfg
@@ -1,8 +1,9 @@
 nThreads=16
+frameRate=60
 recordCompression=xz
 fastGameAiming=1.0
 systemZoom=1.25
 fastGameAiStrength=1.0
 locale=zh_CN
 resolution=1920x1080
-version=30
+version=31
