--- a/user/config.cfg
+++ b/user/config.cfg
@@ -1,10 +1,12 @@
+antiAliasing=balanced
 nThreads=16
 frameRate=500
 recordCompression=xz
 fastGameAiming=1.0
 performance=high
 systemZoom=1.25
+display=fullScreen
 fastGameAiStrength=1.0
 locale=zh_CN
 resolution=1920x1080
-version=38
+version=39
