--- a/user/config.cfg
+++ b/user/config.cfg
@@ -3,7 +3,7 @@ nThreads=16
 frameRate=500
 recordCompression=xz
 fastGameAiming=1.0
-performance=high
+performance=veryHigh
 systemZoom=1.25
 display=windowed
 fastGameAiStrength=1.0
