--- a/user/config.cfg
+++ b/user/config.cfg
@@ -5,8 +5,8 @@ recordCompression=xz
 fastGameAiming=1.0
 performance=veryHigh
 systemZoom=1.25
-display=windowed
+display=fullScreen
 fastGameAiStrength=1.0
 locale=zh_CN
 resolution=1920x1080
-version=40
+version=41
