--- a/user/config.cfg
+++ b/user/config.cfg
@@ -1,12 +1,13 @@
 antiAliasing=balanced
 nThreads=16
-frameRate=500
 recordCompression=xz
-fastGameAiming=1.0
-performance=veryHigh
-systemZoom=1.25
+productionFrameRate=240
 display=windowed
-fastGameAiStrength=1.0
 locale=zh_CN
 resolution=1920x1080
 version=44
+frameRate=500
+fastGameAiming=1.0
+performance=veryHigh
+systemZoom=1.25
+fastGameAiStrength=1.0
