--- a/user/config.cfg
+++ b/user/config.cfg
@@ -1,14 +1,20 @@
 antiAliasing=balanced
+aimingExtension=true
 nThreads=16
 recordCompression=xz
 effectVolume=1.0
 productionFrameRate=240
+traceTarget=false
 display=windowed
+drawAiPath=true
+traceAll=false
+traceWhite=false
 locale=zh_CN
 resolution=1920x1080
 version=56
 frameRate=500
 fastGameAiming=1.0
+autoChangeBreakCue=true
 performance=veryHigh
 systemZoom=1.25
 fastGameAiStrength=1.0
