--- a/user/config.cfg
+++ b/user/config.cfg
@@ -7,12 +7,12 @@ effectVolume=1.0
 productionFrameRate=240
 traceTarget=false
 display=windowed
-drawAiPath=true
+drawAiPath=false
 traceAll=false
 traceWhite=false
 locale=zh_CN
 resolution=1920x1080
-version=57
+version=58
 frameRate=500
 fastGameAiming=1.0
 autoChangeBreakCue=true
